k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: timer-app
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: timer-app
  template:
    metadata:
      labels:
        app: timer-app
    spec:
      containers:
        - name: timer-app
          image: akstestacraitjbd.azurecr.io/timer-project:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
