k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: timer-service
  namespace: default
spec:
  selector:
    app: timer-app
  ports:
    - protocol: TCP
      port: 80        
      targetPort: 3000 
  type: ClusterIP
