k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: timer-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: letsencrypt-dns-cloudflare

spec:
  ingressClassName: nginx
  rules:
    - host: timer.tahmidur-chow.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: timer-service
                port:
                  number: 80
  tls:
    - hosts:
        - timer.tahmidur-chow.com
      secretName: timer-tls
